@@ -707,10 +707,10 @@ else {
 					}
 				}
 			}
-			
-			//Print sidebar
-			$_SESSION[$guid]["sidebarExtra"]=sidebarExtra($guid, $connection2, $gibbonCourseClassID, "write") ;
 		}
+			
+		//Print sidebar
+		$_SESSION[$guid]["sidebarExtra"]=sidebarExtra($guid, $connection2, $gibbonCourseClassID, "write") ;
 	}
 }		
 ?>
