@@ -38,6 +38,7 @@ v12.0.00
 		System Admin: Improved version comparison in module updater
 		System Admin: Improved version comparison in non-login database updater
 		Activities: fixed error in adding and editing activities when payment is turned off
+		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
 		Students: added year group to New Students report when using Date Range setting 
 		User Admin: added notification to form tutor(s) when a student's privacy options change (via Edit or Data Update).		
 		
